sort.basic.bubble.AlgBubbleSort3.scala.error
Erreur de compilation :
AlgBubbleSort3:20: error: not found: value comptr
      if (comptr == i+1) {
          ^